# bsu-programming

./: lab1.c++  lab2.c++  lab3.c++  lab4(var4A).c++  lab4(var4A1).c++  lab4(var4B).c++  lab5.c++
calc/: CMakeLists.txt  calc.cpp  calc.h  stack.cpp  stack.h
control-work1 by Kazantseva/: CMakeLists.txt  main.cpp  visibilityWindow.h
control-works(by Kazantseva)/kr1/: fileIOData.h
inheritance/: CMakeLists.txt  student.cpp  student.h
kr1/: CMakeLists.txt  fileIOData.cpp  fileIOData.h  main.cpp  test.cpp  test_visibility_window.cpp  visibilityWindow.cpp  visibilityWindow.h
kr1/data/: output.txt  screen.txt  segments.txt
lab(c:first-term)/kr2/: Animal.cpp  Animal.h  AppZoo.cpp  AppZoo.h  CMakeLists.txt  Date.cpp  Date.h  main-2.cpp  testAnimal.cpp  testDate.cpp
lab6/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
lab7/: CMakeLists.txt  Student.cpp  Student.h
